--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,14 @@ dependencies:
   json_table: ^2.0.1
   flutter_chips_input: ^1.10.0
   fluttertoast: ^8.0.8
+  cached_network_image: ^3.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^1.1.1
+  build_runner:
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
