--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -50,6 +49,7 @@ dependencies:
   flutter_chips_input: ^1.10.0
   fluttertoast: ^8.0.8
   cached_network_image: ^3.1.0
+  easy_localization: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/langs/
     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
