--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   fluttertoast: ^8.0.8
   cached_network_image: ^3.1.0
   easy_localization: ^3.0.0
+  # New packages
+  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
   flutter_test:
