Change app theme and work on gallery_tab.dart and content_preview_view.dart

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,17 @@
 org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
+
+#systemProp.http.proxyHost=185.61.152.137
+#systemProp.http.proxyPort=8080
+#systemProp.http.proxyUser=
+#systemProp.http.proxyPassword=
+#systemProp.http.nonProxyHosts=
+#systemProp.http.auth.ntlm.domain=
+#
+#systemProp.https.proxyHost=140.227.69.170
+#systemProp.https.proxyPort=6000
+#systemProp.https.proxyUser=
+#systemProp.https.proxyPassword=
+#systemProp.https.nonProxyHosts=
+#systemProp.https.auth.ntlm.domain=
