--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,8 @@ dependencies:
   file_picker: ^4.0.2
   flutter_form_builder: ^6.1.0+1
   flutter_typeahead: ^3.2.0
-  flutter_html: ^2.1.2
-  html_editor_enhanced: ^2.3.0
+  flutter_html: ^2.1.5
+#  html_editor_enhanced: ^2.3.0
   json_table: ^2.0.1
   flutter_chips_input: ^1.10.0
   fluttertoast: ^8.0.8
