--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   easy_localization: ^3.0.0
   # New packages
   font_awesome_flutter: ^9.2.0
+  flutter_staggered_grid_view: ^0.4.1
 
 dev_dependencies:
   flutter_test:
