--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   # New packages
   font_awesome_flutter: ^9.2.0
   flutter_staggered_grid_view: ^0.4.1
+  device_info: ^2.0.2
+  package_info: ^2.0.2
 
 dev_dependencies:
   flutter_test:
