--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.1
   device_info: ^2.0.2
   package_info: ^2.0.2
+  firebase_core: ^1.10.0
+  firebase_messaging: ^11.1.0
+  visibility_detector: ^0.2.2
 
 dev_dependencies:
   flutter_test:
