--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   firebase_core: ^1.10.0
   firebase_messaging: ^11.1.0
   visibility_detector: ^0.2.2
+  photo_view: ^0.13.0
 
 dev_dependencies:
   flutter_test:
