--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   firebase_messaging: ^11.1.0
   visibility_detector: ^0.2.2
   photo_view: ^0.13.0
+  path_provider: ^2.0.3
+  open_file: ^3.2.0
 
 dev_dependencies:
   flutter_test:
