--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,5 +48,10 @@
 		</array>
 		<key>UIStatusBarHidden</key>
 		<true/>
+		<key>LSApplicationQueriesSchemes</key>
+		<array>
+		<string>https</string>
+		<string>http</string>
+		</array>
 	</dict>
 </plist>
