--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   photo_view: ^0.13.0
   path_provider: ^2.0.3
   open_file: ^3.2.0
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
