--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ flutter:
     - assets/icons/
     - assets/langs/
     - assets/
+    - assets/message_thumbnails/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
