--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -53,5 +53,11 @@
 		<string>https</string>
 		<string>http</string>
 		</array>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>Allow access to photo library</string>
+		<key>NSCameraUsageDescription</key>
+		<string>Allow access to camera to capture photos</string>
+		<key>NSMicrophoneUsageDescription</key>
+		<string>Allow access to microphone</string>
 	</dict>
 </plist>
