--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,8 @@ dependencies:
   path_provider: ^2.0.3
   open_file: ^3.2.0
   url_launcher: ^6.0.9
-
+  image_picker: ^0.8.4+1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
