--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -11,7 +11,7 @@
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundleName</key>
-		<string>Alfityan School</string>
+		<string>Retaal International Academy</string>
 		<key>CFBundlePackageType</key>
 		<string>APPL</string>
 		<key>CFBundleShortVersionString</key>
@@ -50,8 +50,8 @@
 		<true/>
 		<key>LSApplicationQueriesSchemes</key>
 		<array>
-		<string>https</string>
-		<string>http</string>
+			<string>https</string>
+			<string>http</string>
 		</array>
 		<key>NSPhotoLibraryUsageDescription</key>
 		<string>Allow access to photo library</string>
