--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: school_erp
-description: Alfityan School App.
+description: Retaal International Academy App.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -70,8 +70,12 @@ dev_dependencies:
   flutter_native_splash: ^1.2.0
   hive_generator: ^1.1.1
   build_runner:
-
-
+  flutter_launcher_icons: ^0.9.2
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/app_logo.png"
+  remove_alpha_ios: true
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
