--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.alfityan.school</string>
+	<string>com.edirection.manar</string>
 	<key>PROJECT_ID</key>
 	<string>mobile-erp-a6e89</string>
 	<key>STORAGE_BUCKET</key>
